added bootstrap and removed wrapper div

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,3 +53,8 @@
   </div>
 
 </footer>
+
+<script type="text/javascript" src="vendor/js/bootstrap.min.js">
+</script>
+<script type="text/javascript" src="vendor/js/jquery-2.2.0.min.js">
+</script>
