--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{{ site.description }}">
   <!-- Bootstrap Core CSS -->
-  <!-- <link href="vendor/css/bootstrap.min.css" rel="stylesheet"> -->
+  <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
   <!-- <link href="css/custom.css" rel="stylesheet"> -->
