--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,7 +54,7 @@
 
 </footer>
 
-<script type="text/javascript" src="vendor/js/bootstrap.min.js">
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
 </script>
-<script type="text/javascript" src="vendor/js/jquery-2.2.0.min.js">
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js">
 </script>
