--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,3 +58,5 @@
 </script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js">
 </script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/github-repo-widget/e23d85ab8f/jquery.githubRepoWidget.min.js">
+</script>
