--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,3 +202,17 @@ pre {
         }
     }
 }
+
+/**
+ * Center Anything
+ */
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.project-title {
+    text-align: center;
+    font-size: 24px;
+}
