Reworked home to show posts with show_in_home set to true, Added first three projects (arbo, yogamen, serenity quest), Minor fixes to styling in scss and project/index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -233,4 +233,13 @@
             font-size: 18px;
         }
     }
+
+    p {
+        margin-right: 30%;
+    }
+}
+
+.post-category {
+    font-size: 12px;
+    color: #757274;
 }
