started adding thumbnails

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -235,6 +235,9 @@
     }
 
     p {
-        margin-right: 30%;
+        margin-right: 20%;
+    }
+    img {
+        horizontal-align: middle;
     }
 }
