--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,6 +60,7 @@
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/github-repo-widget/e23d85ab8f/jquery.githubRepoWidget.min.js">
 </script>
+<!-- Google Analytics
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -70,3 +71,4 @@
   ga('send', 'pageview');
 
 </script>
+-->
