--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
 
   {% include header.html %}
 
-  <div class="page-content post-content">
+  <div class="page-content post-content wrapper row">
 	  {{ content }}
   </div>
 
